@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 
 # options.pl: generate options dialog boxes
-# Copyright (c) 2001-2008 Philip Kendall, Fredrick Meunier
+# Copyright (c) 2001-2013 Philip Kendall, Fredrick Meunier
 
 # $Id$
 
@@ -37,7 +37,7 @@ my %combo_default;
 my @dialogs = Fuse::Dialog::read( shift @ARGV );
 
 print Fuse::GPL( 'options.c: options dialog boxes',
-		 '2001-2004 Philip Kendall' ) . << "CODE";
+		 '2001-2013 Philip Kendall' ) . << "CODE";
 
 /* This file is autogenerated from options.dat by options.pl.
    Do not edit unless you know what you\'re doing! */
@@ -365,9 +365,26 @@ widget_options_finish( widget_finish_state finished )
 {
   /* If we exited normally, actually set the options */
   if( finished == WIDGET_FINISHED_OK ) {
+    /* Apply new options */
     settings_copy( &settings_current, &widget_options_settings );
-    /* Bring the peripherals list into sync with the new options */
-    periph_posthook();
+
+    int needs_hard_reset = periph_postcheck();
+
+    if( needs_hard_reset ) {
+      error = widget_do( WIDGET_TYPE_QUERY,
+                         "Some options need to reset the machine. Reset?" );
+      if( !error && !widget_query.confirm )
+        settings_copy( &settings_current, &original_settings );
+      else
+        periph_posthook();
+    }
+    else {
+      /* Bring the peripherals list into sync with the new options */
+      periph_posthook();
+    }
+
+    settings_free( &original_settings );
+
     /* make the needed UI changes */
     uidisplay_hotswap_gfx_mode();
   }
