@@ -4494,3 +4494,14 @@
          confirmation dialogue for reset due to peripheral changes (Sergio).
 20130517 README: update date for 1.1 release.
 20130518 README: mention DISCiPLE support (Stuart).
+20130518 ui/widget/options.pl: display confirmation dialogue for reset due to
+         peripheral changes (Stuart).
+20130518 ui/widget/options.pl: update peripherals list when a machine reset is
+         not needed (Sergio).
+20130519 ui/widget/{query.c,widget.c,widget_internals.h}: display confirmation
+         messages (Stuart).
+20130519 ui/widget/{options.pl,query.c}: choose no/cancel upon pressing escape
+         for all all confirmation dialogues, and remove workaround for this
+         from peripheral reset confirmation dialogue (Stuart).
+20130519 ui/{gtk/gtkui.c,widget/menu.c,win32/win32ui.c}: use different
+         confirmation messages for hard and soft resets (Stuart).
